Updating the model selection tutorial.

--- a/tutorial_TeX/RB_Read_Data_Tutorial/RB_Read_Data_Tutorial_content.tex
+++ b/tutorial_TeX/RB_Read_Data_Tutorial/RB_Read_Data_Tutorial_content.tex
@@ -124,19 +124,7 @@ data <- concatenate(data_ITS, data_rbcL, data_matK)
 \section{Continuous Trait Data}
 
 
-
-\bigskip
-\section*{Useful Links}
-
-\begin{itemize}
-\item RevBayes: \href{https://github.com/revbayes/code}{https://github.com/revbayes/code} \\ \vspace{-7mm}
-\item MrBayes: \href{http://mrbayes.sourceforge.net/}{http://mrbayes.sourceforge.net} \\ \vspace{-7mm}
-\item PhyloBayes: \href{http://megasun.bch.umontreal.ca/People/lartillot/www/index.htm}{http://www.phylobayes.org} \\ \vspace{-7mm}
-\item Bali-Phy: \href{http://www.bali-phy.org/}{http://www.bali-phy.org} \\ \vspace{-7mm}
-%\item BEAGLE: \href{http://code.google.com/p/beagle-lib/}{http://code.google.com/p/beagle-lib/} \\ \vspace{-7mm}
-\item Tree Thinkers: \href{http://treethinkers.org/}{http://treethinkers.org} \\ \vspace{-7mm}
-\end{itemize}
-
+\vspace{5cm}
 Questions about this tutorial can be directed to: \\\vspace{-10mm}
 \begin{itemize}
 \item Tracy Heath (email: \href{mailto:tracyh@berkeley.edu}{tracyh@berkeley.edu}) \\\vspace{-8mm}
