--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
@@ -499,10 +499,10 @@ This should be all for the HKY model.
 \newpage
 \section{The General Time-Reversible (GTR) Substitution Model}
 
-In the above section we used the HKY substitution model and thus a model with unequal base frequencies and a rate for the difference between transitions and transversion.
-However, the HKY model may still be too simple in most realistic cases.
-Here we extend the model to the General Time Reversible (GTR) substitution model \citep{Tavare1986}.
-The rate matrix of the GTR mode is defined as
+The HKY substitution model can accommodate unequal base frequencies and different rates of transition and transversion substitutions.
+Despite these extensions, the HKY model may still be too simple in most realistic cases.
+Here, we extend the HKY model to specify the General Time Reversible (GTR) substitution model \citep{Tavare1986}, which allows all six exchangeability rates to differ.
+The instantaneous-rate matrix for the GTR substitution model is
 \begin{equation*}
 \resizebox{\textwidth}{!}{%  
 $Q_{GTR} = \begin{pmatrix}
@@ -521,15 +521,18 @@ $Q_{GTR} = \begin{pmatrix}
 \end{figure}
 
 
-\subsection{The  Parameters}
+\subsection{Exchangeability Rate Parameters}
 
-First, we will define and specify a prior on the exchangeability rates of the GTR model. We will use a flat Dirichlet prior distribution on these six rates. To do this, we must begin by defining a constant node that specifies the vector of concentration values of the Dirichlet prior using the \cl{v()} function:
+The GTR model requires that we define and specify a prior on the six exchangeability rates, which we will describe using a flat Dirichlet distribution.
+As we did previously for the Dirichlet prior on base frequencies, we first define a constant node specifying the vector of concentration-parameter values using the \cl{v()} function:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 er_prior <- v(1,1,1,1,1,1) 
 \end{lstlisting}
 \end{snugshade*}}
-This node defines the parameters of the Dirichlet prior distribution on the exchangeability rates. Thus, we can create a stochastic node for the exchangeability rates using the \cl{dnDirichlet()} function, which takes a vector of values as an argument and the \cl{\rbdn} operator. Together, these create a stochastic node named \cl{er} ($\theta$ in Figure \ref{fig:gtr}): 
+This node defines the concentration-parameter values of the Dirichlet prior distribution on the exchangeability rates. 
+Now, we can create a stochastic node for the exchangeability rates using the \cl{dnDirichlet()} function, which takes the vector of concentration-parameter values as an argument and the \cl{\rbdn} operator. 
+Together, these create a stochastic node named \cl{er} ($\theta$ in Figure \ref{fig:gtr}): 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 er ~ dnDirichlet(er_prior)
@@ -537,20 +540,24 @@ er ~ dnDirichlet(er_prior)
 \end{snugshade*}}
 
 
-The Dirichlet distribution assigns probability densities to grouped parameters: \EG, those that measure proportions and must sum to 1. 
-Above, we specified a 6-parameter Dirichlet prior on the relative rates of the GTR model, where the placement of each value specified represents one of the 6 relative rates: (1) $A\leftrightarrows C$, (2) $A\leftrightarrows G$, (3) $A\leftrightarrows T$, (4) $C\leftrightarrows G$, (5) $C\leftrightarrows T$, (6) $G\leftrightarrows T$. 
-The input parameters of a Dirichlet distribution are called shape parameters or concentration parameters and a value is specified for each of the 6 GTR rates. 
+The Dirichlet distribution assigns probability densities to a group of parameters: e.g., those that measure proportions and must sum to 1. 
+Here, we have specified a six-parameter Dirichlet prior, where each value describes one of the six relative rates of the GTR model: 
+(1) $A\leftrightarrows C$; (2) $A\leftrightarrows G$; (3) $A\leftrightarrows T$; (4) $C\leftrightarrows G$; (5) $C\leftrightarrows T$; (6) $G\leftrightarrows T$. 
+The input 
+% why not describe these as hyperparameters?
+parameters of a Dirichlet distribution are called shape (or concentration) parameters. 
 The expectation and variance for each variable are related to the sum of the shape parameters.
-The prior above is a `flat' or symmetric Dirichlet since all of the shape parameters are equal (1,1,1,1,1,1), thus we are specifying a model that allows for equal rates of change between nucleotides, such that the expected rate for each is equal to $\frac{1}{6}$ \citep{Zwickl2004}.
-Figure \ref{dirichletFig}a shows the probability density of each rate under this model.
-If we parameterized the Dirichlet distribution such that all of the parameters were equal to 100, this would also specify a prior with an expectation of equal exchangeability rates (Figure \ref{dirichletFig}b). 
-However, by increasing the shape parameters of the Dirichlet distribution, \cl{er\_prior <- v(100,100,100,100,100,100)}, would heavily restrict the MCMC from sampling sets of GTR rates in which the values were not equal or very nearly equal ({\it i.e.}, this is a very {\em informative} prior). 
-We can consider a different Dirichlet parameterization if we had strong prior belief that transitions and transversions occurred at different rates.
-In this case, we could specify a more informative prior density: \cl{er\_prior <- v(4,8,4,4,8,4)}. 
-Under this model, the expected rate for transversions would be $\frac{4}{32}$ and the expected rate for transitions would equal $\frac{8}{32}$, and there would be greater prior probability on sets of GTR rates that matched this configuration (Figure \ref{dirichletFig}c). 
-An alternative informative prior would be one where we assumed that each of the 6 GTR rates had a different value conforming to a Dirichlet(2,4,6,8,10,12). 
+The prior we specified above is a `flat' or symmetric Dirichlet distribution; all of the shape parameters are equal (1,1,1,1,1,1).
+This describes a model that allows for equal rates of change between nucleotides, such that the expected rate for each is equal to $\frac{1}{6}$ (Figure \ref{dirichletFig}a).
+%Figure \ref{dirichletFig}a shows the probability density of each rate under this model.
+We might also parameterize the Dirichlet distribution such that all of the shape parameters were equal to 100, which would also specify a prior with an expectation of equal exchangeability rates (Figure \ref{dirichletFig}b). 
+However, by increasing the values of the shape parameters, \cl{er\_prior <- v(100,100,100,100,100,100)}, the Dirichlet distribution will more strongly favor equal exchangeability rates; ({\it i.e.}, providing is a relatively {\em informative} prior). 
+Alternatively, we might consider an asymmetric Dirichlet parameterization that could reflect a strong prior belief that transitions and transversions occurred at different rates.
+For example, we might specify the prior density \cl{er\_prior <- v(4,8,4,4,8,4)}.   
+Under this model, the expected rate for transversions would be $\frac{4}{32}$ and that for transitions would be $\frac{8}{32}$, and there would be greater prior probability on sets of GTR rates that matched this configuration (Figure \ref{dirichletFig}c). 
+Yet another informative prior could specify that each of the six GTR rates had a different value conforming to a Dirichlet(2,4,6,8,10,12). 
 This would lead to a different prior probability density for each rate parameter (Figure \ref{dirichletFig}d).
-Without strong prior knowledge about the pattern of relative rates, however, we can better capture our statistical uncertainty with a vague prior on the GTR rates. 
+Without strong prior knowledge about the pattern of relative rates, however, we can better reflect our uncertainty by using a vague prior on the GTR rates. 
 Notably, all patterns of relative rates have the same probability density under \cl{er\_prior <- v(1,1,1,1,1,1)}.
 \begin{figure}[h!]
 \centering
@@ -560,7 +567,7 @@ Notably, all patterns of relative rates have the same probability density under 
 \end{figure}
 
 
-For each stochastic node in our model, we must also specify a proposal mechanism if we wish to sample that value. 
+For each stochastic node in our model, we must also specify a proposal mechanism if we wish to estimate that parameter. 
 The Dirichlet prior on our parameter \cl{er} creates a \href{http://en.wikipedia.org/wiki/Simplex}{\textit{simplex}} of values that sum to 1. 
 
 {\tt\small \begin{snugshade*}
@@ -586,7 +593,7 @@ moves[++mi] <- mvSimplexElementScale(pi, weight=2)
 \end{lstlisting}
 \end{snugshade*}}
 
-We can finish setting up this part of the model by creating a deterministic node for the GTR rate matrix \cl{Q}. 
+We can finish setting up this part of the model by creating a deterministic node for the GTR instantaneous-rate matrix \cl{Q}. 
 The \cl{fnGTR()} function takes a set of exchangeability rates and a set of base frequencies to compute the rate matrix used when calculating the likelihood of our model.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
@@ -600,9 +607,9 @@ Q := fnGTR(er,pi)
 \subsection{Execise 3}
 
 \begin{itemize}
-\item Use your previous analysis file, either the \cl{JukesCantor.Rev} or \cl{HKY.Rev} to create a GTR analysis in a new file called \cl{GTR.Rev}.
-Adopt the old analysis to use now the GTR model. 
-\item Run an MCMC to estimate the posterior distribution.
+\item Use one of your previous analysis file, either the \cl{JukesCantor.Rev} or \cl{HKY.Rev}, to create a GTR analysis in a new file called \cl{GTR.Rev}.
+	Adapt the old analysis to be performed under the GTR substitution model. 
+\item Run an MCMC analysis to estimate the posterior distribution.
 \item Complete the table of the phylogenetic relationship of Tarsiers.
 \end{itemize}
 
