--- a/tutorial_TeX/RB_CTMC_Tutorial/refs.bib
+++ b/tutorial_TeX/RB_CTMC_Tutorial/refs.bib
@@ -174,6 +174,16 @@
   Timestamp                = {2009.02.05}
 }
 
+@ARTICLE{yang94a,
+  author = {Z. Yang},
+  title = {Maximum likelihood phylogenetic estimation from {DNA} sequences with
+	variable rates over sites: {A}pproximate methods},
+  journal = JME,
+  year = {1994},
+  volume = {39},
+  pages = {306--314}
+}
+
 @Article{Zwickl2004,
   Title                    = {Model parameterization, prior distributions, and the general time-reversible model in Bayesian phylogenetics},
   Author                   = {Zwickl, Derrick J and Holder, Mark T},
